--- a/app/src/main/res/layout/activity_daily_routine_edit.xml
+++ b/app/src/main/res/layout/activity_daily_routine_edit.xml
@@ -7,8 +7,8 @@
         <import type="android.view.View" />
 
         <variable
-            name="dailyEmptyViewModel"
-            type="com.sopetit.softie.ui.dailyroutine.DailyRoutineViewModel" />
+            name="dailyRoutineEditViewModel"
+            type="com.sopetit.softie.ui.dailyroutine.dailyroutineedit.DailyRoutineEditViewModel" />
 
     </data>
 
@@ -46,7 +46,7 @@
             android:id="@+id/v_daily_routine_edit_blank"
             android:layout_width="match_parent"
             android:layout_height="2dp"
-            android:visibility="@{dailyEmptyViewModel.routineAddList.size() == 0 ? View.VISIBLE : View.GONE}"
+            android:visibility="@{dailyRoutineEditViewModel.routineAddList.size() == 0 ? View.VISIBLE : View.GONE}"
             app:layout_constraintTop_toBottomOf="@id/tv_daily_routine_edit_name" />
 
         <androidx.constraintlayout.widget.ConstraintLayout
@@ -56,7 +56,7 @@
             android:layout_marginHorizontal="20dp"
             android:layout_marginTop="10dp"
             android:background="@drawable/shape_white_fill_20_rect"
-            android:visibility="@{dailyEmptyViewModel.routineAddList.size() >= 1 ? View.VISIBLE : View.GONE}"
+            android:visibility="@{dailyRoutineEditViewModel.routineAddList.size() >= 1 ? View.VISIBLE : View.GONE}"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/tv_daily_routine_edit_name">
@@ -151,7 +151,7 @@
             android:layout_marginHorizontal="20dp"
             android:layout_marginTop="8dp"
             android:background="@drawable/shape_white_fill_20_rect"
-            android:visibility="@{dailyEmptyViewModel.routineAddList.size() >= 2 ? View.VISIBLE : View.GONE}"
+            android:visibility="@{dailyRoutineEditViewModel.routineAddList.size() >= 2 ? View.VISIBLE : View.GONE}"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/cl_daily_routine_edit_first">
@@ -245,7 +245,7 @@
             android:layout_marginHorizontal="20dp"
             android:layout_marginTop="8dp"
             android:background="@drawable/shape_white_fill_20_rect"
-            android:visibility="@{dailyEmptyViewModel.routineAddList.size() == 3 ? View.VISIBLE : View.GONE}"
+            android:visibility="@{dailyRoutineEditViewModel.routineAddList.size() == 3 ? View.VISIBLE : View.GONE}"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/cl_daily_routine_edit_second">
@@ -340,7 +340,7 @@
             android:layout_marginTop="8dp"
             android:background="@drawable/shape_gray200_line_20_rect"
             android:clickable="true"
-            android:visibility="@{dailyEmptyViewModel.routineAddList.size() == 3 ? View.GONE : View.VISIBLE}"
+            android:visibility="@{dailyRoutineEditViewModel.routineAddList.size() == 3 ? View.GONE : View.VISIBLE}"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/cl_daily_routine_edit_third">
