--- a/app/src/main/res/layout/fragment_daily_routine.xml
+++ b/app/src/main/res/layout/fragment_daily_routine.xml
@@ -61,7 +61,7 @@
             app:layout_constraintTop_toBottomOf="@id/tv_daily_routine_name">
 
             <ImageView
-                android:id="@+id/iv_daily_routine_icon"
+                android:id="@+id/iv_daily_routine_icon_first"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="20dp"
@@ -71,26 +71,26 @@
                 app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
-                android:id="@+id/tv_daily_routine_add_name"
+                android:id="@+id/tv_daily_routine_add_name_first"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="12dp"
                 android:text="@string/daily_routine_user_add"
                 android:textAppearance="@style/body1"
-                app:layout_constraintStart_toEndOf="@id/iv_daily_routine_icon"
-                app:layout_constraintTop_toTopOf="@id/iv_daily_routine_icon" />
+                app:layout_constraintStart_toEndOf="@id/iv_daily_routine_icon_first"
+                app:layout_constraintTop_toTopOf="@id/iv_daily_routine_icon_first" />
 
             <ImageView
-                android:id="@+id/iv_daily_routine_fin"
+                android:id="@+id/iv_daily_routine_fin_first"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="6dp"
                 android:src="@drawable/ic_daily_fin"
-                app:layout_constraintStart_toStartOf="@id/tv_daily_routine_add_name"
-                app:layout_constraintTop_toBottomOf="@id/tv_daily_routine_add_name" />
+                app:layout_constraintStart_toStartOf="@id/tv_daily_routine_add_name_first"
+                app:layout_constraintTop_toBottomOf="@id/tv_daily_routine_add_name_first" />
 
             <TextView
-                android:id="@+id/tv_daily_routine_ing"
+                android:id="@+id/tv_daily_routine_ing_first"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="4dp"
@@ -98,16 +98,19 @@
                 android:text="@string/daily_routine_ing"
                 android:textAppearance="@style/caption1"
                 android:textColor="@color/gray300"
-                app:layout_constraintStart_toEndOf="@id/iv_daily_routine_fin"
-                app:layout_constraintTop_toBottomOf="@id/tv_daily_routine_add_name" />
+                app:layout_constraintStart_toEndOf="@id/iv_daily_routine_fin_first"
+                app:layout_constraintTop_toBottomOf="@id/tv_daily_routine_add_name_first" />
 
             <androidx.appcompat.widget.AppCompatButton
-                android:id="@+id/btn_daily_routine_yet_fin"
+                android:id="@+id/btn_daily_routine_yet_fin_first"
                 android:layout_width="0dp"
-                android:layout_height="38dp"
+                android:layout_height="wrap_content"
                 android:layout_marginHorizontal="20dp"
                 android:layout_marginBottom="16dp"
                 android:background="@drawable/shape_main1_fill_10_rect"
+                android:minHeight="0dp"
+                android:paddingTop="10dp"
+                android:paddingBottom="11dp"
                 android:text="@string/daily_routine_fin_btn"
                 android:textAppearance="@style/body4"
                 android:textColor="@color/white"
@@ -116,12 +119,15 @@
                 app:layout_constraintStart_toStartOf="parent" />
 
             <androidx.appcompat.widget.AppCompatButton
-                android:id="@+id/btn_daily_routine_fin"
+                android:id="@+id/btn_daily_routine_fin_first"
                 android:layout_width="0dp"
-                android:layout_height="38dp"
+                android:layout_height="wrap_content"
                 android:layout_marginHorizontal="20dp"
                 android:layout_marginBottom="16dp"
                 android:background="@drawable/shape_gray100_fill_10_rect"
+                android:minHeight="0dp"
+                android:paddingTop="10dp"
+                android:paddingBottom="11dp"
                 android:text="@string/daily_routine_fin"
                 android:textAppearance="@style/body4"
                 android:textColor="@color/gray300"
@@ -129,6 +135,7 @@
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent" />
+
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -203,10 +210,13 @@
             <androidx.appcompat.widget.AppCompatButton
                 android:id="@+id/btn_daily_routine_fin_second"
                 android:layout_width="0dp"
-                android:layout_height="38dp"
+                android:layout_height="wrap_content"
                 android:layout_marginHorizontal="20dp"
                 android:layout_marginBottom="16dp"
                 android:background="@drawable/shape_gray100_fill_10_rect"
+                android:minHeight="0dp"
+                android:paddingTop="10dp"
+                android:paddingBottom="11dp"
                 android:text="@string/daily_routine_fin"
                 android:textAppearance="@style/body4"
                 android:textColor="@color/gray300"
@@ -273,10 +283,13 @@
             <androidx.appcompat.widget.AppCompatButton
                 android:id="@+id/btn_daily_routine_yet_fin_third"
                 android:layout_width="0dp"
-                android:layout_height="38dp"
+                android:layout_height="wrap_content"
                 android:layout_marginHorizontal="20dp"
                 android:layout_marginBottom="16dp"
                 android:background="@drawable/shape_main1_fill_10_rect"
+                android:minHeight="0dp"
+                android:paddingTop="10dp"
+                android:paddingBottom="11dp"
                 android:text="@string/daily_routine_fin_btn"
                 android:textAppearance="@style/body4"
                 android:textColor="@color/white"
@@ -287,10 +300,13 @@
             <androidx.appcompat.widget.AppCompatButton
                 android:id="@+id/btn_daily_routine_fin_third"
                 android:layout_width="0dp"
-                android:layout_height="38dp"
+                android:layout_height="wrap_content"
                 android:layout_marginHorizontal="20dp"
                 android:layout_marginBottom="16dp"
                 android:background="@drawable/shape_gray100_fill_10_rect"
+                android:minHeight="0dp"
+                android:paddingTop="10dp"
+                android:paddingBottom="11dp"
                 android:text="@string/daily_routine_fin"
                 android:textAppearance="@style/body4"
                 android:textColor="@color/gray300"
