--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -27,14 +27,14 @@
         <item name="chipMinHeight">0dp</item>
         <item name="chipStartPadding">0dp</item>
         <item name="chipCornerRadius">99dp</item>
-        <item name="chipBackgroundColor">@color/white</item>
+        <item name="chipBackgroundColor">@color/selector_happy_type_filter_background</item>
         <item name="textStartPadding">14dp</item>
         <item name="textEndPadding">14dp</item>
         <item name="rippleColor">#00FFFFFF</item>
         <item name="android:paddingVertical">10dp</item>
         <item name="chipStrokeWidth">1dp</item>
         <item name="chipStrokeColor">@color/gray100</item>
-        <item name="android:textColor">@color/gray400</item>
+        <item name="android:textColor">@color/selector_happy_type_text_color</item>
     </style>
 
 
