#10 [chore] xml 변수명 수정

--- a/app/src/main/res/layout/activity_happy_add_list.xml
+++ b/app/src/main/res/layout/activity_happy_add_list.xml
@@ -10,7 +10,8 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/background">
+        android:background="@color/background"
+        android:fitsSystemWindows="true">
 
         <ImageView
             android:id="@+id/iv_happy_add_back_arrow"
